--- a/swp111/nbproject/private/private.properties
+++ b/swp111/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\84353\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+deploy.ant.properties.file=C:\\Users\\nguyen ngoc quang\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
 file.reference.activation-1.1.jar=C:\\Users\\84353\\Downloads\\lib\\activation-jaf1.1.1.jar
 file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\84353\\Downloads\\lib\\lib\\jar_files\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.mail-2.0.1.jar=C:\\Users\\84353\\Downloads\\lib\\lib\\jar_files\\jakarta.mail-2.0.1.jar
@@ -8,4 +8,4 @@ j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\84353\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\nguyen ngoc quang\\AppData\\Roaming\\NetBeans\\13\\build.properties
