--- a/swp111/nbproject/private/private.properties
+++ b/swp111/nbproject/private/private.properties
@@ -1,11 +1,12 @@
-deploy.ant.properties.file=C:\\Users\\84353\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
-file.reference.activation-1.1.jar=C:\\Users\\84353\\Downloads\\lib\\activation-jaf1.1.1.jar
-file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\84353\\Downloads\\lib\\lib\\jar_files\\jakarta.activation-2.0.1.jar
-file.reference.jakarta.mail-2.0.1.jar=C:\\Users\\84353\\Downloads\\lib\\lib\\jar_files\\jakarta.mail-2.0.1.jar
-file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\84353\\Downloads\\lib\\mysql-connector-j-8.2.0.jar
+deploy.ant.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+file.reference.activation-1.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\activation-1.1.jar
+file.reference.commons-codec-1.16.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\commons-codec-1.16.0\\commons-codec-1.16.0.jar
+file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.activation-2.0.1.jar
+file.reference.jakarta.mail-2.0.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.mail-2.0.1.jar
+file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\mysql-connector-j-8.2.0.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
 j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\84353\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\13\\build.properties
