--- a/swp111/nbproject/project.properties
+++ b/swp111/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=\
 excludes=
 file.reference.activation-1.1.jar=../../../../ACER/Downloads/Required Forms/Required Forms/jars/activation-1.1.jar
 file.reference.commons-codec-1.16.0.jar=C:\\Users\\84353\\Documents\\Zalo Received Files\\commons-codec-1.16.0.jar
+file.reference.gson-2.10.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\gson-2.10.1.jar
 file.reference.jakarta.activation-2.0.1.jar=../../../../VIVO-S15/OneDrive/M\u00e1y t\u00ednh/jar_files/jakarta.activation-2.0.1.jar
 file.reference.jakarta.mail-2.0.1.jar=../../../../VIVO-S15/OneDrive/M\u00e1y t\u00ednh/jar_files/jakarta.mail-2.0.1.jar
 file.reference.mysql-connector-j-8.2.0.jar=../../../../VIVO-S15/Documents/Downloads/mysql-connector-j-8.2.0/mysql-connector-j-8.2.0/mysql-connector-j-8.2.0.jar
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.jakarta.mail-2.0.1.jar}:\
     ${file.reference.mysql-connector-j-8.2.0.jar}:\
     ${file.reference.activation-1.1.jar}:\
-    ${file.reference.commons-codec-1.16.0.jar}
+    ${file.reference.commons-codec-1.16.0.jar}:\
+    ${file.reference.gson-2.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
