--- a/swp111/nbproject/project.properties
+++ b/swp111/nbproject/project.properties
@@ -34,6 +34,9 @@ file.reference.commons-codec-1.16.0.jar=C:\\Users\\84353\\Documents\\Zalo Receiv
 file.reference.gson-2.10.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\gson-2.10.1.jar
 file.reference.jakarta.activation-2.0.1.jar=../../../../VIVO-S15/OneDrive/M\u00e1y t\u00ednh/jar_files/jakarta.activation-2.0.1.jar
 file.reference.jakarta.mail-2.0.1.jar=../../../../VIVO-S15/OneDrive/M\u00e1y t\u00ednh/jar_files/jakarta.mail-2.0.1.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0_1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.servlet.jsp.jstl-2.0.0_1.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.mssql-jdbc-10.2.2.jre17.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\mssql-jdbc-10.2.2.jre17.jar
 file.reference.mysql-connector-j-8.2.0.jar=../../../../VIVO-S15/Documents/Downloads/mysql-connector-j-8.2.0/mysql-connector-j-8.2.0/mysql-connector-j-8.2.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -49,7 +52,10 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-8.2.0.jar}:\
     ${file.reference.activation-1.1.jar}:\
     ${file.reference.commons-codec-1.16.0.jar}:\
-    ${file.reference.gson-2.10.1.jar}
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0_1.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
+    ${file.reference.mssql-jdbc-10.2.2.jre17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
