--- a/swp111/nbproject/project.properties
+++ b/swp111/nbproject/project.properties
@@ -61,7 +61,8 @@ javac.classpath=\
     ${file.reference.gson-2.10.1.jar}:\
     <<<<<<< HEAD:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
+    ${file.reference.mssql-jdbc-10.2.2.jre17.jar}
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
 =======
