--- a/swp111/nbproject/project.properties
+++ b/swp111/nbproject/project.properties
@@ -29,21 +29,16 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.activation-1.1.jar=../../../../ACER/Downloads/Required Forms/Required Forms/jars/activation-1.1.jar
-file.reference.commons-codec-1.16.0.jar=C:\\Users\\84353\\Documents\\Zalo Received Files\\commons-codec-1.16.0.jar
+file.reference.activation-1.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\activation-1.1.jar
+file.reference.commons-codec-1.16.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\commons-codec-1.16.0\\commons-codec-1.16.0.jar
 file.reference.gson-2.10.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\gson-2.10.1.jar
-file.reference.jakarta.activation-2.0.1.jar=../../../../VIVO-S15/OneDrive/M\u00e1y t\u00ednh/jar_files/jakarta.activation-2.0.1.jar
-file.reference.jakarta.mail-2.0.1.jar=../../../../VIVO-S15/OneDrive/M\u00e1y t\u00ednh/jar_files/jakarta.mail-2.0.1.jar
-<<<<<<< HEAD
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Desktop\\lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\Desktop\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-=======
+file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.activation-2.0.1.jar
+file.reference.jakarta.mail-2.0.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.mail-2.0.1.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0_1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.servlet.jsp.jstl-2.0.0_1.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.mssql-jdbc-10.2.2.jre17.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\mssql-jdbc-10.2.2.jre17.jar
->>>>>>> 176877d0db5d786b81da53d5e7bc19144dac6a70
-file.reference.mysql-connector-j-8.2.0.jar=../../../../VIVO-S15/Documents/Downloads/mysql-connector-j-8.2.0/mysql-connector-j-8.2.0/mysql-connector-j-8.2.0.jar
+file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\mysql-connector-j-8.2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -53,16 +48,16 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    <<<<<<< HEAD:\
+    ${file.reference.activation-1.1.jar}:\
+    ${file.reference.gson-2.10.1.jar}:\
     ${file.reference.jakarta.activation-2.0.1.jar}:\
     ${file.reference.jakarta.mail-2.0.1.jar}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar}:\
-    ${file.reference.activation-1.1.jar}:\
-    ${file.reference.commons-codec-1.16.0.jar}:\
-    ${file.reference.gson-2.10.1.jar}:\
-    <<<<<<< HEAD:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
-    ${file.reference.mssql-jdbc-10.2.2.jre17.jar}
+    ${file.reference.mssql-jdbc-10.2.2.jre17.jar}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar}:\
+    ${file.reference.commons-codec-1.16.0.jar}
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
 =======
