--- a/swp111/nbproject/project.properties
+++ b/swp111/nbproject/project.properties
@@ -29,35 +29,37 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.activation-1.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\activation-1.1.jar
-file.reference.commons-codec-1.16.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\commons-codec-1.16.0\\commons-codec-1.16.0.jar
-file.reference.gson-2.10.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\gson-2.10.1.jar
-file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.activation-2.0.1.jar
-file.reference.jakarta.mail-2.0.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.mail-2.0.1.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.activation-1.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\LibProject\\activation-1.1.jar
+file.reference.commons-codec-1.16.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\LibProject\\commons-codec-1.16.0.jar
+file.reference.gson-2.10.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\LibProject\\gson-2.10.1.jar
+file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\LibProject\\jakarta.activation-2.0.1.jar
+file.reference.jakarta.mail-2.0.1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\LibProject\\jakarta.mail-2.0.1.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\LibProject\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0_1.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.servlet.jsp.jstl-2.0.0_1.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\LibProject\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.mssql-jdbc-10.2.2.jre17.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\mssql-jdbc-10.2.2.jre17.jar
-file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\mysql-connector-j-8.2.0.jar
+file.reference.mssql-jdbc-10.2.2.jre17.jar-1=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\LibProject\\mssql-jdbc-10.2.2.jre17.jar
+file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\admin\\Desktop\\Semester 5\\SWP301\\lib\\LibProject\\mysql-connector-j-8.2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.20.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.4-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.20.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.1-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     <<<<<<< HEAD:\
     ${file.reference.activation-1.1.jar}:\
+    ${file.reference.commons-codec-1.16.0.jar}:\
     ${file.reference.gson-2.10.1.jar}:\
     ${file.reference.jakarta.activation-2.0.1.jar}:\
     ${file.reference.jakarta.mail-2.0.1.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.mssql-jdbc-10.2.2.jre17.jar}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar}:\
-    ${file.reference.commons-codec-1.16.0.jar}
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
+    ${file.reference.mssql-jdbc-10.2.2.jre17.jar-1}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar}
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
 =======
